--- a/src/main/resources/templates/user/diaryDetails.html
+++ b/src/main/resources/templates/user/diaryDetails.html
@@ -22,7 +22,7 @@
 <!-- 体調   -->
             <div class="wrapper">
                 <div class="container">
-                    <div>
+                    <div style="margin-right:100px;">
                 <table border="1" style="border-collapse: collapse">
                     <tr>
                         <th>学年</th>
@@ -39,14 +39,14 @@
 
                     </tr>
                     <tr style="height:40px;">
-                        <th>本文</th>
-                        <td colspan="6" th:text="${diary.diaryText}"></td>
+                        <th>所属</th>
+                        <td colspan="6" th:text="${diary.schoolName}"></td>
                     </tr>
 
                 </table>
                     </div>
                     <div>
-                        <table>
+                        <table border="1">
                             <tr>
                                 <th>担任確認印</th>
                             </tr>
