--- a/src/main/resources/templates/user/diaryList.html
+++ b/src/main/resources/templates/user/diaryList.html
@@ -7,7 +7,7 @@
     <title>examination</title>
 
     <!--CSS読み込み-->
-    <link rel="stylesheet" th:href="@{/css/diaryUpload.css}">
+    <link rel="stylesheet" th:href="@{/css/diaryList.css}">
 </head>
 
 <body>
@@ -18,14 +18,45 @@
         <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
             <h1>日記一覧</h1>
         </div>
-        <div class="wrapper">
-            <form method="post">
+        <div class="wrapper" style="background-color:#008080; padding:10px; margin-bottom:25px;">
+            <form method="get">
                 <div class="container">
-                    <div>
-                        <span style="margin-right:10px;">学生</span>
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">学年</span>
+                        <input type="text" name="" />
+                    </div>
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">クラス</span>
+                        <input type="text" name="" />
+                    </div>
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">出席番号</span>
                         <input type="text" name="" />
                     </div>
                 </div>
+                <div class="container">
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">苗字</span>
+                        <input type="text" name="" />
+                    </div>
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">名前</span>
+                        <input type="text" name="" />
+                    </div>
+                    <div style="margin-right:20px;">
+                        <span style="margin-right:5px;">日付</span>
+                        <input type="text" name="" />
+                    </div>
+                    <div style="width:20%;">
+                        <span style="margin-right:5px;">確認</span>
+                        <select name="checked">
+                            <option value="none">指定なし</option>
+                            <option value="true">確認済</option>
+                            <option value="false">未確認</option>
+                        </select>
+                    </div>
+                </div>
+                <div style="text-align:center; margin-top:20px;"><input type="submit" value="検索"></div>
             </form>
 
         </div>
