--- a/src/main/resources/templates/user/diaryList.html
+++ b/src/main/resources/templates/user/diaryList.html
@@ -19,33 +19,33 @@
             <h1>日記一覧</h1>
         </div>
         <div class="wrapper" style="background-color:#008080; padding:10px; margin-bottom:25px;">
-            <form method="get">
+            <form method="get" action="/user/diaryList/search">
                 <div class="container">
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">学年</span>
-                        <input type="text" name="" />
+                        <input type="text" name="grade" />
                     </div>
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">クラス</span>
-                        <input type="text" name="" />
+                        <input type="text" name="userClass" />
                     </div>
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">出席番号</span>
-                        <input type="text" name="" />
+                        <input type="text" name="studentNumber" />
                     </div>
                 </div>
                 <div class="container">
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">苗字</span>
-                        <input type="text" name="" />
+                        <input type="text" name="lastName" />
                     </div>
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">名前</span>
-                        <input type="text" name="" />
+                        <input type="text" name="firstName" />
                     </div>
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">日付</span>
-                        <input type="text" name="" />
+                        <input type="text" name="diaryDate" />
                     </div>
                     <div style="width:20%;">
                         <span style="margin-right:5px;">確認</span>
