--- a/src/main/resources/templates/user/diaryList.html
+++ b/src/main/resources/templates/user/diaryList.html
@@ -8,12 +8,13 @@
 
     <!--CSS読み込み-->
     <link rel="stylesheet" th:href="@{/css/diaryList.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
 </head>
 
 <body>
     <div style="width:100%">
-        <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
-            <img th:src="@{/img/logo.png}" style="width:200px;" />
+        <div class="logo_box">
+            <img class="logo_img" th:src="@{/img/logo.png}" />
         </div>
         <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
             <h1>日記一覧</h1>
@@ -44,13 +45,14 @@
                         <input type="text" name="firstName" />
                     </div>
                     <div style="margin-right:20px;">
-                        <span style="margin-right:5px;">日付</span>
+                        <span style="">日付</span>
+                        <span style="font-size:11px; margin-right:5px;">(例 2023/12/11)</span>
                         <input type="text" name="diaryDate" />
                     </div>
-                    <div style="width:20%;">
+                    <div style="width:23%;">
                         <span style="margin-right:5px;">確認</span>
                         <select name="checked">
-                            <option value="none">指定なし</option>
+                            <option value="">指定なし</option>
                             <option value="true">確認済</option>
                             <option value="false">未確認</option>
                         </select>
@@ -91,10 +93,13 @@
                     </tr>
                     <tr style="height:40px;">
                         <th>本文</th>
-                        <td colspan="6" th:text="${diary.diaryText}"></td>
+                        <td colspan="6" style="width:750px;" th:text="${diary.diaryText}"></td>
                     </tr>
                         </span>
                 </table>
+                <th:block th:if="${diaries.size() == 0}">
+                    該当する日記はありません
+                </th:block>
             </div>
     
     </div>
