--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -7,13 +7,14 @@
     <title>examination</title>
 
     <!--CSS読み込み-->
-<!--    <link rel="stylesheet" href="./css/style.css">-->
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+
 </head>
 
 <body>
     <div style="width:100%">
-        <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
-            <img th:src="@{/img/logo.png}" style="width:200px;">
+        <div class="logo_box">
+            <img class="logo_img" th:src="@{/img/logo.png}"/>
         </div>
         <form method="post" action="/user/login">
         <div class="login_box" style="width:70%; margin:0 auto; text-align:center;">
