--- a/src/main/resources/templates/user/diaryList.html
+++ b/src/main/resources/templates/user/diaryList.html
@@ -16,12 +16,26 @@
         <div class="logo_box">
             <img class="logo_img" th:src="@{/img/logo.png}" />
         </div>
+        <div class="header">
+            <div class="header_content">
+                <ul class="header_menu">
+                    <li><a href="/user/diaryUpload">投稿する</a></li>
+                    <li><a href="/user/diaryList">日記一覧</a></li>
+                    <li><a href="/user/consultationUpload">相談する</a></li>
+                    <li><a href="/user/consultationList">相談一覧</a></li>
+                    <li><a href="/user/studentList">生徒一覧</a></li>
+                </ul>
+                <ul class="header_menu">
+                    <li><a href="/user/login">ログアウト</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
             <h1>日記一覧</h1>
         </div>
         <div class="wrapper" style="background-color:#008080; padding:10px; margin-bottom:25px;">
             <form method="get" action="/user/diaryList/search">
-                <div class="container">
+                <div class="search_container">
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">学年</span>
                         <input type="text" name="grade" />
@@ -35,7 +49,7 @@
                         <input type="text" name="studentNumber" />
                     </div>
                 </div>
-                <div class="container">
+                <div class="search_container">
                     <div style="margin-right:20px;">
                         <span style="margin-right:5px;">苗字</span>
                         <input type="text" name="lastName" />
