--- a/src/main/resources/templates/user/diaryUpload.html
+++ b/src/main/resources/templates/user/diaryUpload.html
@@ -16,6 +16,20 @@
     <div class="logo_box">
         <img class="logo_img" th:src="@{/img/logo.png}"/>
     </div>
+    <div class="header">
+        <div class="header_content">
+            <ul class="header_menu">
+                <li><a href="/user/diaryUpload">投稿する</a></li>
+                <li><a href="/user/diaryList">日記一覧</a></li>
+                <li><a href="/user/consultationUpload">相談する</a></li>
+                <li><a href="/user/consultationList">相談一覧</a></li>
+                <li><a href="/user/studentList">生徒一覧</a></li>
+            </ul>
+            <ul class="header_menu">
+                <li><a href="/user/login">ログアウト</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="img_box" style="width:300px; margin-left:40px; margin-top:30px;">
         <h1>日記投稿</h1>
     </div>
