--- a/src/main/resources/templates/user/diaryUpload.html
+++ b/src/main/resources/templates/user/diaryUpload.html
@@ -35,7 +35,8 @@
     </div>
     <form method="post" action="/user/diaryUpload" th:object="${diaryForm}">
     <!-- ユーザーID       -->
-        <input th:field="*{userId}" type="hidden" value="0000000001" />
+<!--        <input th:field="*{userId}" name="userId" type="hidden" value="0000000001" />-->
+        <input name="userId" type="hidden" value="0000000001" />
 
         <!-- 体調   -->
         <div class="wrapper">
@@ -180,7 +181,9 @@
                 <h2>本文</h2>
                 <textarea th:field="*{diaryText}" name="text" style="width:80%;height:70px;"></textarea>
             </div>
+            <div style="width:80%; text-align:center; margin-bottom:30px;">
             <button type="submit" id="submitButton">提出</button>
+            </div>
     </form>
 
 </div>
