日記投稿不具合再現

--- a/src/main/resources/templates/user/diaryUpload.html
+++ b/src/main/resources/templates/user/diaryUpload.html
@@ -35,8 +35,8 @@
     </div>
     <form method="post" action="/user/diaryUpload" th:object="${diaryForm}">
     <!-- ユーザーID       -->
-<!--        <input th:field="*{userId}" name="userId" type="hidden" value="0000000001" />-->
-        <input name="userId" type="hidden" value="0000000001" />
+        <input th:field="*{userId}" name="userId" type="hidden" value="0000000001" />
+<!--        <input name="userId" type="hidden" value="0000000001" />-->
 
         <!-- 体調   -->
         <div class="wrapper">
