Revert "相談検索実装(日付、確認以外)"
This reverts commit ff6737a37b93a5ad6a1c44820dbe07c15cd6cd01.

--- a/src/main/resources/templates/user/consultationList.html
+++ b/src/main/resources/templates/user/consultationList.html
@@ -61,11 +61,11 @@
                 <div style="margin-right:20px;">
                     <span style="">日付</span>
                     <span style="font-size:11px; margin-right:5px;">(例 2023/12/11)</span>
-                    <input type="text" name="consultationDate" />
+                    <input type="text" name="diaryDate" />
                 </div>
                 <div style="width:23%;">
                     <span style="margin-right:5px;">確認</span>
-                    <select name="checked" th:field="*{checked}">
+                    <select name="checked">
                         <option value="">指定なし</option>
                         <option value="true">確認済</option>
                         <option value="null">未確認</option>
